Started adding server profiles.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
     "daos",
     "ffi",
     "formals",
+    "fullchain",
+    "pem",
+    "privkey",
     "pubspec",
     "todos",
     "unawaited"
